--- a/frontend/brovi.html
+++ b/frontend/brovi.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/png" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Обучение — Брови</title>
+    <meta name="description" content="Курс обучения перманентному макияжу бровей от Приймак Алины. Программа, тарифы, запись. Краснодар.">
+    <style>html,body{margin:0;background:#fff;min-height:100vh;} body{opacity:0;} .nav-panel{opacity:0;pointer-events:none;}</style>
+    <link rel="icon" type="image/png" href="/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Onest:wght@200;400;600&display=swap" rel="stylesheet">
@@ -48,18 +50,18 @@
                 aria-hidden="true">
         </button>
         <nav class="nav-panel__nav">
-            <a href="obuchenie.html" class="nav-panel__link">Обучение</a>
-            <a href="index.html#alina" class="nav-panel__link">О мастере</a>
-            <a href="index.html#alina" class="nav-panel__link">Портфолио</a>
-            <a href="index.html#pricelist-brows" class="nav-panel__link">Прайс лист</a>
-            <a href="index.html#feedback" class="nav-panel__link">Отзывы</a>
-            <a href="index.html#feedback" class="nav-panel__link">Контакты</a>
+            <a href="/obuchenie" class="nav-panel__link">Обучение</a>
+            <a href="/#alina" class="nav-panel__link">О мастере</a>
+            <a href="/#alina" class="nav-panel__link">Портфолио</a>
+            <a href="/#pricelist-brows" class="nav-panel__link">Прайс лист</a>
+            <a href="/#feedback" class="nav-panel__link">Отзывы</a>
+            <a href="/#feedback" class="nav-panel__link">Контакты</a>
         </nav>
     </div>
 
     <main class="obuchenie obuchenie--program-page" id="obuchenie">
         <header class="obuchenie__header" aria-label="Шапка страницы">
-            <a href="obuchenie.html" class="obuchenie__back" aria-label="Назад к программам">
+            <a href="/obuchenie" class="obuchenie__back" aria-label="Назад к программам">
                 <img src="/backbutton.svg" alt="" class="obuchenie__back-icon" width="7" height="14" aria-hidden="true">
             </a>
             <button type="button" class="obuchenie__nav-btn" id="obuchenie-nav-btn" aria-label="Меню">
