--- a/frontend/podval.html
+++ b/frontend/podval.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/png" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Обратная связь — Контакты</title>
+    <title>Эстетика в деталях — контакты и отзывы</title>
+    <meta name="description" content="Контакты Приймак Алины: запись на процедуры, WhatsApp, Telegram, Instagram. Адрес в Краснодаре, отзывы клиентов.">
+    <style>html,body{margin:0;background:#fff;min-height:100vh;} body{opacity:0;} .nav-panel{opacity:0;pointer-events:none;}</style>
+    <link rel="icon" type="image/png" href="/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Onest:wght@200;400;600&display=swap" rel="stylesheet">
@@ -48,17 +50,17 @@
                 aria-hidden="true">
         </button>
         <nav class="nav-panel__nav">
-            <a href="obuchenie.html" class="nav-panel__link">Обучение</a>
-            <a href="index.html#alina" class="nav-panel__link">О мастере</a>
-            <a href="index.html#alina" class="nav-panel__link">Портфолио</a>
-            <a href="index.html#pricelist-brows" class="nav-panel__link">Прайс лист</a>
-            <a href="podval.html" class="nav-panel__link">Отзывы</a>
-            <a href="podval.html" class="nav-panel__link">Контакты</a>
+            <a href="/obuchenie" class="nav-panel__link">Обучение</a>
+            <a href="/#alina" class="nav-panel__link">О мастере</a>
+            <a href="/#alina" class="nav-panel__link">Портфолио</a>
+            <a href="/#pricelist-brows" class="nav-panel__link">Прайс лист</a>
+            <a href="/podval" class="nav-panel__link">Отзывы</a>
+            <a href="/podval" class="nav-panel__link">Контакты</a>
         </nav>
     </div>
 
     <main class="podval" id="podval">
-        <a href="index.html" class="obuchenie__back" aria-label="Назад на главную">
+        <a href="/" class="obuchenie__back" aria-label="Назад на главную">
             <img src="/backbutton.svg" alt="" class="obuchenie__back-icon" width="7" height="14" aria-hidden="true">
         </a>
         <button type="button" class="obuchenie__nav-btn" id="podval-nav-btn" aria-label="Меню">
@@ -70,34 +72,20 @@
                 <span class="podval__title-line">ЭСТЕТИКА</span>
                 <span class="podval__title-line podval__title-line--gradient">В ДЕТАЛЯХ</span>
             </h1>
-            <img src="/public/lookall/card.png" alt="Описание" class="podval__img--1" width="350" height="200"
-                loading="lazy">
-            <img src="/public/lookall/2.png" alt="Описание" class="podval__img--2" width="350" height="200"
-                loading="lazy">
-            <img src="/public/lookall/3.png" alt="Описание" class="podval__img--3" width="350" height="200"
-                loading="lazy">
-            <img src="/public/lookall/4.png" alt="Описание" class="podval__img--4" width="350" height="200"
-                loading="lazy">
-            <img src="/public/lookall/5.png" alt="Описание" class="podval__img--5" width="350" height="200"
-                loading="lazy">
-            <img src="/public/lookall/6.png" alt="Описание" class="podval__img--6" width="350" height="200"
-                loading="lazy">
-            <img src="/public/lookall/7.png" alt="Описание" class="podval__img--7" width="350" height="200"
-                loading="lazy">
-            <img src="/public/lookall/8.png" alt="Описание" class="podval__img--8" width="350" height="200"
-                loading="lazy">
-            <img src="/public/lookall/9.png" alt="Описание" class="podval__img--9" width="350" height="200"
-                loading="lazy">
-            <img src="/public/lookall/10.png" alt="Описание" class="podval__img--10" width="350" height="200"
-                loading="lazy">
-            <img src="/public/lookall/11.png" alt="Описание" class="podval__img--11" width="350" height="200"
-                loading="lazy">
-            <img src="/public/lookall/12.png" alt="Описание" class="podval__img--12" width="350" height="200"
-                loading="lazy">
-            <img src="/public/lookall/13.png" alt="Описание" class="podval__img--13" width="350" height="200"
-                loading="lazy">
-            <img src="/public/lookall/14.png" alt="Описание" class="podval__img--14" width="350" height="200"
-                loading="lazy">
+            <img src="/lookall/card.png" alt="" class="podval__img--1" width="350" height="200" loading="lazy" decoding="async">
+            <img src="/lookall/2.png" alt="" class="podval__img--2" width="350" height="200" loading="lazy" decoding="async">
+            <img src="/lookall/3.png" alt="" class="podval__img--3" width="350" height="200" loading="lazy" decoding="async">
+            <img src="/lookall/4.png" alt="" class="podval__img--4" width="350" height="200" loading="lazy" decoding="async">
+            <img src="/lookall/5.png" alt="" class="podval__img--5" width="350" height="200" loading="lazy" decoding="async">
+            <img src="/lookall/6.png" alt="" class="podval__img--6" width="350" height="200" loading="lazy" decoding="async">
+            <img src="/lookall/7.png" alt="" class="podval__img--7" width="350" height="200" loading="lazy" decoding="async">
+            <img src="/lookall/8.png" alt="" class="podval__img--8" width="350" height="200" loading="lazy" decoding="async">
+            <img src="/lookall/9.png" alt="" class="podval__img--9" width="350" height="200" loading="lazy" decoding="async">
+            <img src="/lookall/10.png" alt="" class="podval__img--10" width="350" height="200" loading="lazy" decoding="async">
+            <img src="/lookall/11.png" alt="" class="podval__img--11" width="350" height="200" loading="lazy" decoding="async">
+            <img src="/lookall/12.png" alt="" class="podval__img--12" width="350" height="200" loading="lazy" decoding="async">
+            <img src="/lookall/13.png" alt="" class="podval__img--13" width="350" height="200" loading="lazy" decoding="async">
+            <img src="/lookall/14.png" alt="" class="podval__img--14" width="350" height="200" loading="lazy" decoding="async">
             <!-- Контент страницы — наполняйте здесь -->
         </div>
 
