--- a/frontend/obuchenie.html
+++ b/frontend/obuchenie.html
@@ -3,9 +3,11 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="icon" type="image/png" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Обучение — программы</title>
+    <meta name="description" content="Программы обучения перманентному макияжу: курсы по бровям и ресницам. Авторская методика, практика, сертификат. Краснодар.">
+    <style>html,body{margin:0;background:#fff;min-height:100vh;} body{opacity:0;} .nav-panel{opacity:0;pointer-events:none;}</style>
+    <link rel="icon" type="image/png" href="/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Onest:wght@200;400;600&display=swap" rel="stylesheet">
@@ -34,18 +36,18 @@
             <img src="/navi/Vector%20(2).svg" alt="" class="nav-panel__close-icon" width="16" height="14" aria-hidden="true">
         </button>
         <nav class="nav-panel__nav">
-            <a href="obuchenie.html" class="nav-panel__link">Обучение</a>
-            <a href="index.html#alina" class="nav-panel__link">О мастере</a>
-            <a href="index.html#alina" class="nav-panel__link">Портфолио</a>
-            <a href="index.html#pricelist-brows" class="nav-panel__link">Прайс лист</a>
-            <a href="index.html#feedback" class="nav-panel__link">Отзывы</a>
-            <a href="index.html#feedback" class="nav-panel__link">Контакты</a>
+            <a href="/obuchenie" class="nav-panel__link">Обучение</a>
+            <a href="/#alina" class="nav-panel__link">О мастере</a>
+            <a href="/#alina" class="nav-panel__link">Портфолио</a>
+            <a href="/#pricelist-brows" class="nav-panel__link">Прайс лист</a>
+            <a href="/#feedback" class="nav-panel__link">Отзывы</a>
+            <a href="/#feedback" class="nav-panel__link">Контакты</a>
         </nav>
     </div>
 
     <!-- Контент страницы Обучение: 390px по центру, координаты по макету -->
     <main class="obuchenie" id="obuchenie">
-        <a href="index.html" class="obuchenie__back" aria-label="Назад на главную">
+        <a href="/" class="obuchenie__back" aria-label="Назад на главную">
             <img src="/backbutton.svg" alt="" class="obuchenie__back-icon" width="7" height="14" aria-hidden="true">
         </a>
         <button type="button" class="obuchenie__nav-btn" id="obuchenie-nav-btn" aria-label="Меню">
@@ -57,10 +59,10 @@
         </h1>
         <p class="obuchenie__subtitle">Выберите приоритетную зону, чтобы ознакомиться с тарифами и планом курса</p>
         <img src="/Rectangle%2010.png" alt="" class="obuchenie__img" width="350" height="426" loading="lazy">
-        <a href="brovi.html" class="obuchenie__btn" aria-label="Брови">
+        <a href="/brovi" class="obuchenie__btn" aria-label="Брови">
             <img src="/btnBROVI.svg" alt="" class="obuchenie__btn-img" width="350" height="55" aria-hidden="true">
         </a>
-        <a href="resnitsy.html" class="obuchenie__btn obuchenie__btn--resnitsy" aria-label="Ресницы">
+        <a href="/resnitsy" class="obuchenie__btn obuchenie__btn--resnitsy" aria-label="Ресницы">
             <img src="/btnRESNITSY.svg" alt="" class="obuchenie__btn-img" width="350" height="55" aria-hidden="true">
         </a>
         <div class="obuchenie__inner">
